OLMIS-2711: fixed spacing on adjustment modal

--- a/src/openlmis-adjustments/adjustments-modal.scss
+++ b/src/openlmis-adjustments/adjustments-modal.scss
@@ -8,6 +8,7 @@
                 font-weight: bold;
                 content: ':'
             }
+            margin-right: 0.5em;
         }
 
         dd:not(:last-of-type) {
